<resources>
    <string name="app_name">InterviewTask</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_account">My Account</string>
    <string name="orders">Orders</string>
    <string name="how_works">How It Works</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="new_order">New Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my_account_fragment">My Account Fragment</string>
</resources>