<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_selected"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/order_selected"
            android:title="@string/title_orders"/>

    <item
             android:title=""/>


 <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/notification_selected"
            android:iconTint="@color/dark_blue_color"
            android:title="@string/title_notifications"/>


    <item
            android:id="@+id/navigation_my_account"
            android:icon="@drawable/my_account_selected"
            android:title="@string/title_my_account"/>

</menu>